# ai-daily-news

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUTORUN-LOG.md  CLAUDE.md  README.md  claude-code-ai-news-dashboard-plan-prompt.md  pyproject.toml  run-pipeline.bat  run-research-scheduled.bat  run-research.bat  start-site.bat
.claude/: settings.json
cost/: claude_api_cost_2026_06_01_to_2026_06_17.csv
data/: cluster_continuity.json  glossary.json  latest.json  research_stats.json  tags_index.json
docs/: llm-cost-budget.md  populated-verify.md  x2-first-run-runbook.md
guide/: index.html
notebooks/: starter.ipynb
pipeline/: aggregate_tags.py  aggregates_manifest.py  arxiv_refs.py  audit_ci_health.py  audit_cluster_merge.py  audit_sources.py  backfill_first_url_hash.py  backfill_images.py  build_db.py  collect.py  collect_papers.py  corpus_writer.py  dedupe.py  digest.py  embed.py  entity_index.py  extract.py  glossary.py  index_latest.py  model_facts.py  predict_extract.py  quarterly_report.py  rank.py  similarity.py  sources.yaml  state.py  summarize.py  themes.py  trending.py  weekly.py
research/: README.md  methodology.md
reviews/: cluster-merge-audit-2026-07-01.md  cluster-merge-audit-2026-07-06.md  cluster-merge-audit-2026-07-13.md  cluster-merge-audit-2026-07-20.md  embedding-rag-design-2026-07-01.md  llm-cost-estimate-2026-07-01.md  p1b-decision-2026-07-01.md  stats-two-track-plan-2026-07-03.md  story-url-migration-plan-2026-07-01.md
scripts/: check-papers-db.mjs  check-papers-structure.mjs  overview-counts.mjs  (+2 more)
(+473 files in other folders)
